<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TitleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/darkBackgroundColor"
            android:src="@drawable/ic_about"/>

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/darkBackgroundColor"
            android:src="@drawable/ic_exit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/emptySpace"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/title_title"
            android:textSize="80sp" />

        <View
            android:id="@+id/emptySpace"
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/playButton"
            style="@style/MyButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emptySpace"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/play_button_text" />

        <Button
            android:id="@+id/rulesButton"
            style="@style/MyButtonsRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/playButton"
            android:layout_margin="48dp"
            android:text="@string/rules_button_text" />

        <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rulesButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/acme"
            android:text="@string/version"
            android:textColor="?attr/colorControlNormal"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/acme"
            android:text="@string/cred"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />


    </RelativeLayout>

</layout>